# ReadsProfiler

build-client-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-client-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-1dcb7f7488a51c2c22a0.json  codemodel-v2-b992852bf292a4d084ec.json  directory-.-Debug-00672403850d78432bd2.json  index-2023-01-11T10-53-11-0376.json  target-client_autogen-Debug-e464dc1d7933d3815912.json
build-client-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-4d78eae4ef3295f42524.json  target-client-Debug-8168e08fa7ac30ef4a77.json
build-client-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-client-Desktop-Debug/client_autogen/: mocs_compilation.cpp
build-client-Desktop-Debug/client_autogen/EWIEGA46WW/: moc_bookwidget.cpp  moc_bookwidget.cpp.d  moc_gridview.cpp  moc_gridview.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
build-client-Desktop-Debug/client_autogen/include/: ui_mainwindow.h
client/: Book.cpp  Book.h  CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  Error.cpp  Error.h  User.cpp  User.h  bookdetailsdialog.cpp  bookdetailsdialog.h  bookwidget.cpp  bookwidget.h  filterdialogbox.cpp  filterdialogbox.h  gridview.cpp  gridview.h  logindialogbox.cpp  logindialogbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
server/: Book.cpp  Book.h  CMakeLists.txt  Connection.cpp  Connection.h  Database.cpp  Database.h  Error.cpp  Error.h  ReadsProfiler.db  ReadsProfiler.sqbpro  Server.cpp  Server.h  User.cpp  User.h  main.cpp
